Fix the invisibility of register button in blogs
Color of all the children of the blog component was hardcoded
This made the text in the register button in navbar invisible
The issue was fixed

--- a/styles/Blog.module.css
+++ b/styles/Blog.module.css
@@ -6,7 +6,7 @@
   overflow: hidden;
   z-index: 2;
 }
-.blog * {
+.blog {
   color: #003260;
 }
 
